--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Armstrong Calculator</title>
   </head>
   <body>
+    <h1 class="title">Css Armstrong calculator</h1>
     <div class="containerMain">
       <div class="header">
         <span>Ширина комнаты (mm): </span>
